examples/test/testpolicy1004.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1004
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key11: value29
      key3: value34
      key35: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value31
          key8: value2
      podSelector:
        matchLabels:
          key0: value5
          key17: value21
